# GobbatoProject

./: CMakeLists.txt  README.md  heuristic.cpp  heuristic.h  main.cpp
